[gd_scene load_steps=21 format=3 uid="uid://cba36vjp4f0ah"]

[ext_resource type="Script" path="res://scripts/gameobjects/player.gd" id="1_sfcgu"]
[ext_resource type="PackedScene" uid="uid://cxvof3ef3d7f" path="res://scenes/components/velocity_component.tscn" id="2_2sd5o"]
[ext_resource type="PackedScene" uid="uid://btt6snnj05le0" path="res://scenes/components/health_component.tscn" id="3_tktnp"]
[ext_resource type="PackedScene" uid="uid://dahs0lpcdw7qr" path="res://scenes/components/sword_ability_controller.tscn" id="4_rnr73"]
[ext_resource type="PackedScene" uid="uid://c87172ansg6ek" path="res://scenes/components/hurt_component.tscn" id="5_3wyxr"]
[ext_resource type="Texture2D" uid="uid://3ed05pv1hm6v" path="res://assets/Sprites/Knight.png" id="5_7wfhi"]
[ext_resource type="Shader" path="res://resources/white.gdshader" id="5_lf3nu"]
[ext_resource type="PackedScene" uid="uid://tr4ip3dll1g" path="res://scenes/UI/health_bar.tscn" id="6_tipjp"]
[ext_resource type="PackedScene" uid="uid://8gapb0enotrh" path="res://scenes/gameobjects/sword.tscn" id="8_b3bbk"]
[ext_resource type="PackedScene" uid="uid://duhu4iiem7j3g" path="res://scenes/UI/hit_vignette.tscn" id="9_hkdxx"]
[ext_resource type="AudioStream" uid="uid://6bc7irionhtr" path="res://assets/Audio/impactMining_001.ogg" id="10_fa1d4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xa3a8"]
radius = 7.86933
height = 20.2387

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mfnkq"]
shader = ExtResource("5_lf3nu")

[sub_resource type="Animation" id="Animation_ohjcl"]
resource_name = "Dead"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_6bhiv"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [1.5],
"method": &"disable_hurt_collision"
}, {
"args": [false],
"method": &"set_hitted"
}]
}

[sub_resource type="Animation" id="Animation_lj6vd"]
resource_name = "Idle"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Sprite2D:frame_coords")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_5js6w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_l1dak"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7p0w5"]
_data = {
"Dead": SubResource("Animation_ohjcl"),
"Hit": SubResource("Animation_6bhiv"),
"Idle": SubResource("Animation_lj6vd"),
"RESET": SubResource("Animation_5js6w"),
"Walk": SubResource("Animation_l1dak")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2shqx"]
radius = 7.625
height = 20.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
light_mask = 4
visibility_layer = 4
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_sfcgu")

[node name="VelocityComponent" parent="." instance=ExtResource("2_2sd5o")]
max_speed = 50
acceleration = 20.0

[node name="HealthComponent" parent="." instance=ExtResource("3_tktnp")]

[node name="HurtComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_3wyxr")]
health_component = NodePath("../HealthComponent")
character_type = Array[int]([3])
sprite = NodePath("../Animations/Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0.125, 4.25567)
shape = SubResource("CapsuleShape2D_xa3a8")

[node name="Animations" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Animations"]
material = SubResource("ShaderMaterial_mfnkq")
use_parent_material = true
position = Vector2(-0.210228, -0.210224)
texture = ExtResource("5_7wfhi")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_7p0w5")
}
autoplay = "Idle"

[node name="SwordAbilityController" parent="." instance=ExtResource("4_rnr73")]
position = Vector2(-16.541, -14.2298)
sword_scene = ExtResource("8_b3bbk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.125)
shape = SubResource("CapsuleShape2D_2shqx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource("6_tipjp")]
unique_name_in_owner = true

[node name="HitVignette" parent="." instance=ExtResource("9_hkdxx")]

[node name="HurtAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_fa1d4")
bus = &"sfx"

[node name="Abilities" type="Node2D" parent="."]
